{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Modules",
            "id": "d1a202f8-4adb-45d2-a190-0a18f57f5da6",
            "actions": [
                {
                    "name": "RotateModule",
                    "type": "Value",
                    "id": "a052e65f-2af7-4fdb-a3c5-ddfcd01fac93",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PlaceModule",
                    "type": "Button",
                    "id": "340f904c-489c-4876-8fdc-610aae87f74d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeleteModule",
                    "type": "Button",
                    "id": "f5690711-daed-477b-bb2b-847d83a30609",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CancelModulePlacement",
                    "type": "Button",
                    "id": "fe0527e3-9359-448a-ac08-d1d050bdfbff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f300fadf-f128-4aea-ba24-a50f783ad72a",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateModule",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1f03af0-496e-4fad-8d1a-f8e41897cefb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlaceModule",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "372fa6d3-d2f2-4973-b3d9-25b198218a83",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteModule",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b9f64a6-0542-4a9c-84a2-9c031e40bfad",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelModulePlacement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "70319087-c596-41c2-a4a8-f3c37778b66d",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "1639cd9f-9ad0-4e9b-ac4b-919c3a10159e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "5faf370d-da51-4ab7-85b6-a8487b7266b1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "bb9c223e-8033-4201-a017-5e508f6048cb",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1ba6f979-fdbe-4e5c-b35a-5d2619e57bdd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7c414282-e8f7-405a-a546-6079a18a35e0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c9aaf845-d081-4caa-b3eb-5db24b023be2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d48ff881-0765-47fe-8870-3702b9fd048b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MouseScroll",
                    "id": "ffe722dc-3727-4867-b616-3824b08eada3",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cd5cb9be-295f-4702-9646-47afcc22c185",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "Clamp(min=-1)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7ee11b2f-9c43-445f-8a77-f6192b6bf9b3",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "Clamp(max=1)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}